# lms

./: .env  .replit  .replit.swp  README.md  create_local_admin.py  create_test_courses.py  deployment_requirements.txt  download_nltk_data.py  main.py  mysql_setup.md  populate_dummy_data.py  pyproject.toml  replit.md  reset_admin_2fa.py  setup_db.py  utils.py
app/: __init__.py  config.py  document_analysis.py  forms.py  models.py  routes.py
app/static/css/: admin.css  auth.css  floating-chat.css  main.css
app/static/js/: 2fa.js  floating-chat.js  main.js  validation.js
app/templates/: base.html  document_analysis.html  index.html
app/templates/admin/: add_assignment.html  add_mandatory_course.html  add_question.html  approve_users.html  assignments.html  content.html  dashboard.html  edit_assignment.html  edit_course.html  edit_interest.html  edit_lesson.html  edit_question.html  interests.html  lessons.html  manage_questions.html  mandatory_completion.html  mandatory_courses.html  user_interest_requests.html  user_interests.html  user_progress.html  users.html
app/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  two_factor.html  two_factor_setup.html  verify_email.html  verify_otp.html
app/templates/errors/: 404.html  500.html
app/templates/forum/: course_forum.html  index.html  new_topic.html  topic.html
app/templates/user/: assignment_result.html  course.html  course_assignments.html  dashboard.html  (+4 more)
app/utils/: admin_helpers.py  auth_helpers.py  course_helpers.py  email_helpers.py
instance/: app.db  lms.db
(+1 files in other folders)
