[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "email-validator>=2.3.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyotp>=2.9.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "qrcode>=8.0",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
